--- a/css/main.css
+++ b/css/main.css
@@ -42,14 +42,28 @@ body * {
   margin-top: 30px;
 }
 
-.main header.main-title {
+.main .main-header {
   margin-bottom: 60px;
 }
-.main header.main-title h1 {
+.main .main-header h1 {
   color: #24be55;
 }
 
-.main header.main-title h1 .fa {
+.main .main-header h1 .fa {
   margin-left: 10px;
   font-size: 50px;
+}
+
+.main .section {
+  margin-bottom: 50px;
+}
+.main .main-footer {
+  text-align: center;
+  margin-bottom: 100px;
+}
+.main .main-footer button {
+  margin: auto;
+  padding: 15px;
+  font-size: 30px;
+  width: 300px;
 }
