--- a/css/main.css
+++ b/css/main.css
@@ -136,14 +136,15 @@ body * {
   position: relative;
 }
 
-#quizModal #quizSlider .item .quiz-answer input[type="radio"] {
+#quizModal #quizSlider .item .quiz-answer input[type="radio"],
+#quizModal #quizSlider .item .quiz-answer input[type="checkbox"] {
   width: 25px;
   height: 25px;
   cursor: pointer;
 }
 
 #quizModal #quizSlider .item .subshow {
-  margin-right: 40px;
+  margin-right: 4%;
   padding-right: 12px;
   border-right: 3px solid #24be55;
 }
@@ -165,7 +166,8 @@ body * {
   font-size: 15px;
 }
 
-#quizModal #quizSlider .item .subshow .quiz-answer input[type="radio"] {
+#quizModal #quizSlider .item .subshow .quiz-answer input[type="radio"],
+#quizModal #quizSlider .item .subshow .quiz-answer input[type="checkbox"] {
   width: 20px;
   height: 20px;
 }
